--- a/ServletExhibitions/src/main/webapp/WEB-INF/web.xml
+++ b/ServletExhibitions/src/main/webapp/WEB-INF/web.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- <!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" > -->
-
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
+    <!--filter check exist session for sign in-->
+    <filter>
+        <filter-name>AuthFilter</filter-name>
+        <filter-class>ua.project.servlets.filter.AuthFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>AuthFilter</filter-name>
+        <url-pattern>/</url-pattern>
+    </filter-mapping>
+
+    <!--Logout servlet-->
     <servlet>
-        <servlet-name>GetIndexPageServlet</servlet-name>
-        <servlet-class>ua.project.servlet.GetIndexPageServlet</servlet-class>
+        <servlet-name>LogoutServlet</servlet-name>
+        <servlet-class>ua.project.servlets.servlet.LogoutServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>GetIndexPageServlet</servlet-name>
-        <url-pattern>/</url-pattern>
+        <servlet-name>LogoutServlet</servlet-name>
+        <url-pattern>/logout</url-pattern>
     </servlet-mapping>
-
-  <display-name>Archetype Created Web Application</display-name>
 </web-app>
