--- a/ServletExhibitions/src/main/webapp/WEB-INF/web.xml
+++ b/ServletExhibitions/src/main/webapp/WEB-INF/web.xml
@@ -21,8 +21,17 @@
 
     <filter-mapping>
         <filter-name>AuthFilter</filter-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>/login</url-pattern>
     </filter-mapping>
+
+    <servlet>
+        <servlet-name>Servlet</servlet-name>
+        <servlet-class>ua.project.servlets.servlet.Servlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Servlet</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
 
     <!--Logout servlet-->
     <servlet>
@@ -34,4 +43,18 @@
         <servlet-name>LogoutServlet</servlet-name>
         <url-pattern>/logout</url-pattern>
     </servlet-mapping>
+    
+<!--    <listener>-->
+<!--        <listener-class>ua.project.servlets.listeners.LocalizationListener</listener-class>-->
+<!--    </listener>-->
+    
+    <welcome-file-list>
+        <welcome-file>/WEB-INF/index.jsp</welcome-file>
+    </welcome-file-list>
+
+    <error-page>
+        <exception-type>java.lang.Exception</exception-type>
+        <location>/WEB-INF/error.jsp</location>
+    </error-page>
+
 </web-app>
