--- a/ServletExhibitions/src/main/webapp/WEB-INF/web.xml
+++ b/ServletExhibitions/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,9 @@
     <listener>
         <listener-class>ua.project.servlets.listeners.LocalizationListener</listener-class>
     </listener>
+    <listener>
+        <listener-class>ua.project.servlets.listeners.PageListener</listener-class>
+    </listener>
     
     <welcome-file-list>
         <welcome-file>/WEB-INF/index.jsp</welcome-file>
