--- a/ServletExhibitions/src/main/webapp/WEB-INF/web.xml
+++ b/ServletExhibitions/src/main/webapp/WEB-INF/web.xml
@@ -50,10 +50,14 @@
     <welcome-file-list>
         <welcome-file>/WEB-INF/index.jsp</welcome-file>
     </welcome-file-list>
-
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/error.jsp</location>
+    </error-page>
     <error-page>
         <exception-type>java.lang.Exception</exception-type>
         <location>/WEB-INF/error.jsp</location>
     </error-page>
+
 
 </web-app>
