--- a/ServletExhibitions/src/main/resources/texts_ukr.properties
+++ b/ServletExhibitions/src/main/resources/texts_ukr.properties
@@ -46,5 +46,10 @@ buy.ticket.success=\u0412\u0438 \u0443\u0441\u043F\u0456\u0448\u043D\u043E \u043
 log.in.request=\u0411\u0443\u0434\u044C \u043B\u0430\u0441\u043A\u0430, \u0443\u0432\u0456\u0439\u0434\u0456\u0442\u044C \u0443 \u0441\u0438\u0441\u0442\u0435\u043C\u0443, \u0449\u043E\u0431 \u043A\u0443\u043F\u0438\u0442\u0438 \u043A\u0432\u0438\u0442\u043E\u043A!
 
 error.page.message=\u0421\u0442\u0430\u043B\u0430\u0441\u044F \u043F\u043E\u043C\u0438\u043B\u043A\u0430.
+addition.exhibition.error=\u0414\u0430\u043D\u043D\u0456 \u044F\u043A\u0456 \u0412\u0438 \u0432\u0432\u0435\u043B\u0438 \u043D\u0435\u043F\u0440\u0430\u0432\u0438\u043B\u044C\u043D\u0456.
 
 filtering.filter.by.date=\u0424\u0456\u043B\u044C\u0442\u0440\u0443\u0432\u0430\u0442\u0438 \u0437\u0430 \u0434\u0430\u0442\u043E\u044E
+
+username.regex.regexp=[A-Z][a-z]{1,20}$
+email.regex=^(.+)@(.+)$
+password.regex.regexp=[A-Za-z0-9]{3,30}$
