Implemented output about successful registration.

--- a/ServletExhibitions/src/main/resources/texts_ukr.properties
+++ b/ServletExhibitions/src/main/resources/texts_ukr.properties
@@ -53,3 +53,5 @@ filtering.filter.by.date=\u0424\u0456\u043B\u044C\u0442\u0440\u0443\u0432\u0430\
 username.regex.regexp=[A-Z][a-z]{1,20}$
 email.regex=^(.+)@(.+)$
 password.regex.regexp=[A-Za-z0-9]{3,30}$
+
+register.success=\u0412\u0438 \u0443\u0441\u043F\u0456\u0448\u043D\u043E \u0437\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u0443\u0432\u0430\u043B\u0438\u0441\u044C!
