--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,12 @@
 ### Intellij ###
 
 # User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+.idea/
 
 # mvnw files
 mvnw
 mvnw.cmd
 
-# AWS User-specific
-.idea/**/aws.xml
-
-# Generated files
-.idea/**/contentModel.xml
-
-# Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-.idea/**/dbnavigator.xml
 
 # CMake
 cmake-build-*/
@@ -38,22 +20,17 @@ out/
 # mpeltonen/sbt-idea plugin
 .idea_modules/
 
-# Editor-based Rest Client
-.idea/httpRequests
-
 ### Intellij Patch ###
 
-# *.iml
+*.iml
 # modules.xml
 # .idea/misc.xml
 # *.ipr
 
 # Cache file creation bug
-# See https://youtrack.jetbrains.com/issue/JBR-2257
 .idea/$CACHE_FILE$
 
 # CodeStream plugin
-# https://plugins.jetbrains.com/plugin/12206-codestream
 .idea/codestream.xml
 
 ### Java ###
